Fix invisible trades candles

--- a/src/styles/graph.less
+++ b/src/styles/graph.less
@@ -35,6 +35,7 @@
     }
   }
   .candles {
+    stroke : black;
     .bullish {
       fill: @color_light_buy;
       stroke : darken(@color_light_buy, 50%);
@@ -79,13 +80,12 @@
     }
   }
   .candles {
+    stroke : black;
     .bullish {
       fill: darken(@color_dark_buy, 20%);
-      stroke : #000;
     }
     .bearish {
       fill : darken(@color_dark_sell, 20%);
-      stroke : #000;
     }
   }
   .line {
